force-app/main/default/objects/Partner_Portal_Links__c/Partner_Portal_Links__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community :</description>
    <label>Partner Portal Box Content</label>
    <nameField>
        <label>Partner_Portal_Links Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Portal Box Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>