force-app/main/default/objects/Partner_Portal_Links__c/fields/Content_Justification__c.field-meta.xml
<CustomField>
    <fullName>Content_Justification__c</fullName>
    <label>Content Justification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>