force-app/main/default/objects/Partner_Portal_Links__c/fields/Display_Bullet__c.field-meta.xml
<CustomField>
    <fullName>Display_Bullet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Bullet</label>
    <type>Checkbox</type>
</CustomField>