force-app/main/default/objects/Partner_Portal_Links__c/fields/Display_Page__c.field-meta.xml
<CustomField>
    <fullName>Display_Page__c</fullName>
    <label>Display Page</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open in a New Tab</fullName>
            </value>
            <value>
                <fullName>Open in a New Window</fullName>
            </value>
            <value>
                <fullName>Open in existing page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>