force-app/main/default/objects/Partner_Portal_Links__c/fields/Is_Link__c.field-meta.xml
<CustomField>
    <fullName>Is_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Link</label>
    <type>Checkbox</type>
</CustomField>