force-app/main/default/objects/Partner_Portal_Links__c/fields/Link_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Link_Serial_Number__c</fullName>
    <label>Link Serial Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>