force-app/main/default/objects/Partner_Portal_Links__c/fields/Partner_Portal_Label__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_Label__c</fullName>
    <label>Partner_Portal_Label</label>
    <referenceTo>Partner_Portal_Label__c</referenceTo>
    <relationshipLabel>Partner_Portal_Links</relationshipLabel>
    <relationshipName>Partner_Portal_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>