force-app/main/default/objects/Partner_Portal_Links__c/fields/Portal_Link_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_Link_Name__c</fullName>
    <label>Portal_Link Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>