force-app/main/default/objects/Partner_Portal_Links__c/fields/URL1__c.field-meta.xml
<CustomField>
    <fullName>URL1__c</fullName>
    <label>URL1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>