force-app/main/default/objects/Partner_Portal_Links__c/listViews/All_Box_Content.listView-meta.xml
<ListView>
    <fullName>All_Box_Content</fullName>
    <columns>NAME</columns>
    <columns>Partner_Portal_Label__c</columns>
    <columns>URL__c</columns>
    <columns>URL1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Box Content</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>